get rid of guava collections